<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMode">

    <Button
        android:id="@+id/gameModeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#70db70"
        android:enabled="false"
        android:text="@string/startbutton"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/GameModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/roundstitle"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameModeTitle" />

    <TextView
        android:id="@+id/GameModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gamemode"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <RadioGroup
        android:id="@+id/roundsNo"
        android:layout_width="110dp"
        android:layout_height="202dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/gameModeStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameModeText"
        app:layout_constraintVertical_bias="0.4">

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds1" />


        <RadioButton
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds2" />

        <RadioButton
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds3" />

        <RadioButton
            android:id="@+id/r9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds4" />

        <RadioButton
            android:id="@+id/r11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds5" />

        <RadioButton
            android:id="@+id/r13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="radioButtonCheck"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/rounds6" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>